# MiraPrep

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
backend/ai/: .env.example  README.md  pyproject.toml
backend/ai/app/: __init__.py  config.py  deps.py  logging.py  main.py
backend/ai/app/clients/: __init__.py  business.py  llm.py  redis.py
backend/ai/app/prompts/: grading.py  interviewer.py  outline.py  resume_parse.py
backend/ai/app/routers/: health.py  internal.py  interview_stream.py
backend/ai/app/schemas/: grading.py  interview.py  outline.py  resume.py
backend/ai/app/services/: grading.py  interview_agent.py  interview_graph.py  outline.py  resume_parse.py  session_state.py
backend/ai/tests/: conftest.py  test_clients.py  test_grading.py  test_grading_redis_integration.py  test_health_and_internal.py  test_interview_agent.py  test_interview_agent_service.py  test_langchain_migration.py  test_outline.py  test_resume_parse.py  test_session_state.py  test_session_state_redis_integration.py
backend/business/: .env.example  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
docs/: DEVELOPMENT.md  MiraPrep-PRD.md  README.md
docs/superpowers/: README.md
docs/tasks/: LEARNING.md  README.md  T-001-infra-local-dev.md  T-002-spring-scaffold.md  T-003-fastapi-scaffold.md  T-004-db-schema-migrations.md  T-005-frontend-api-layer.md  T-006-frontend-design-system.md  T-010-auth-backend.md  T-011-auth-frontend.md  T-012-onboarding-profile.md  T-020-resume-backend.md  T-021-resume-parse-ai.md  T-022-resume-frontend.md  T-030-interview-session-backend.md  T-031-outline-generation-ai.md  T-032-interview-setup-frontend.md  T-040-interview-agent-ai.md  T-041-interview-messages-backend.md  T-042-interview-runtime-frontend.md  T-050-grading-ai.md  T-070-asr-ai.md  (+39 more)
frontend/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
infra/: .env.example  docker-compose.yml
scripts/: dev-common.ps1  dev-down.ps1  dev-up.ps1
(+199 files in other folders)
