[project]
name = "miraprep-ai"
version = "0.1.0"
description = "MiraPrep FastAPI AI service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.76.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
