[project]
name = "miraprep-ai"
version = "0.1.0"
description = "MiraPrep FastAPI AI service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=1.2.0,<2.0.0",
    "langchain-anthropic>=1.3.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langgraph-checkpoint-redis>=0.3.0,<1.0.0",
    "pydantic-settings>=2.7.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "redis>=5.2.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
